<resources>
    <string name="app_name">Note Me</string>
    <string name="note_me">NoteMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_tasks">Open Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="demo">Demo</string>
    <string name="created_date">Created Date</string>
    <string name="date_hint">DD:MM:YYYY</string>
    <string name="deadline">Deadline</string>
    <string name="task_details">Task Details</string>
    <string name="description">Description</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="url">URL</string>
    <string name="submit">Submit</string>
    <string name="write_description">Write Description</string>
    <string name="status">Status</string>
    <string name="save_url">Save URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_email">Enter E-mail</string>
    <string name="save_email">Save E-mail</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="save_phone">Save Phone</string>
    <string name="ok">Ok</string>
    <string name="task_saved_successfully">Task Saved Successfully</string>
    <string name="task_updated_successfully">"Task Updated Successfully "</string>
</resources>