<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.rokomari_coding_test.model.Task" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/splash_back"
        tools:context=".activities.details.TaskDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/app_bar">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tool_bar"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/task_details"
                app:titleTextColor="@color/md_grey_800">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_below="@id/app_bar">

            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/created_date"
                        android:textColor="@color/md_grey_900"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:layout_gravity="center"
                        android:gravity="center|left"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/md_grey_800"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/CreateDate"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_back"
                        android:inputType="text"
                        android:ellipsize="end"
                        android:text="@{task.createDate}"
                        android:scrollHorizontally="true"
                        android:maxLines="1"
                        android:textColorHint="@color/md_grey_700"
                        android:hint="@string/date_hint"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Title"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_back"
                        android:inputType="text"
                        android:text="@{task.title}"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:maxLines="1"
                        android:textColorHint="@color/card_text_color"
                        android:hint="@string/task_name"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/card_text_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/description"
                        android:textColor="@color/md_grey_900"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Description"
                        android:layout_width="match_parent"
                        android:layout_height="144dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_back"
                        android:inputType="textMultiLine"
                        android:text="@{task.description}"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:maxLines="4"
                        android:textColorHint="@color/md_grey_700"
                        android:hint="@string/description"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/deadline"
                        android:textColor="@color/md_grey_900"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:layout_gravity="center"
                        android:gravity="center|left"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/md_grey_800"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/Deadline"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_text_back"
                        android:inputType="text"
                        android:text="@{task.deadline}"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:maxLines="1"
                        android:textColorHint="@color/md_grey_700"
                        android:hint="@string/date_hint"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="14sp"
                        android:textColor="@color/md_grey_800"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="16dp"
                    android:weightSum="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_email"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/md_grey_800"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_phone"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/md_grey_800"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/ic_url"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/url"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/md_grey_800"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/submitTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:background="#ed6415"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>