<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/card_back_color"
    android:clickable="true"
    card_view:cardElevation="1dp"
    android:translationZ="2dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:ignore="NamespaceTypo"
    card_view:cardCornerRadius="8dp"
    card_view:cardUseCompatPadding="true"
    android:focusable="true">

    <!--   Recycler View Item Row   -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/taskNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/task_name"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/demo"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/card_text_color"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/createdDateLayout"
            android:layout_below="@id/taskNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/created_date"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/CreateDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:text="@string/date_hint"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deadlineLayout"
            android:layout_below="@id/createdDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textStyle="bold"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/Deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_hint"
                android:layout_gravity="center"
                android:gravity="center|left"
                android:textColor="@color/md_grey_800"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:layout_below="@id/deadlineLayout">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                android:src="@drawable/ic_edit"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:padding="4dp"
                android:src="@drawable/ic_delete"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>